--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                     </div>
                     <div class="col-sm-9 col-md-10 col-md-offset-2 main" >
                         <div class="row">
-                            <div class="col-xs-12 col-md-12" ng-view>
+                            <div class="col-xs-12 col-md-12">
                                 <div class="col-xs3-3 col-md-3" ng-repeat="noticia in noticias">
-                                    <div><h1>{{noticia.titulo}}</h1></div>
-                                    <div>{{noticia.descricao}}</div>
+                                    <div><h1>{{noticia.title}}</h1></div>
+                                    <div>{{noticia.description}}</div>
                                 </div>
                             </div>
                         </div>
