--- a/projetos.html
+++ b/projetos.html
@@ -43,7 +43,7 @@
         <section>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-sm-2 col-md-2 sidebar">
+                    <div class="col-sm-1 col-md-2 sidebar">
                       <ul class="nav nav-sidebar" id="Menu">
                             <li ><a href="index.html"><span class="glyphicon glyphicon-list-alt sd" aria-hidden="true"></span><span class="md">Noticias</span></a></li>
                             <li class="active"><a href="projetos.html"><span class="glyphicon glyphicon-check sd" aria-hidden="true"></span><span class="md">Votar Projetos</span></a></li>
@@ -57,7 +57,16 @@
                                 <div class="col-xs3-12 col-md-4" ng-repeat="projeto in projetos">
                                     <div class="titulo  "><h2>{{projeto.title}}</h2></div>
                                     <div class="descricao">{{projeto.description}}</div>
-                                    <div class="vejaMais"><span>Veja Mais</span><span class="glyphicon glyphicon-new-window"></span></div>
+                                    <div class="vejaMais">
+                                        <span class="label label-danger">
+                                            Não
+                                            <span class="glyphicon glyphicon-remove"></span>
+                                        </span> 
+                                        <span class="label label-success">
+                                            Sim
+                                            <span class="glyphicon glyphicon-ok"></span>
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
                         </div>
