--- a/web/index.html
+++ b/web/index.html
@@ -47,8 +47,8 @@
                       <ul class="nav nav-sidebar" id="Menu">
                             <li class="active"><a href="index.html"><span class="glyphicon glyphicon-list-alt sd" aria-hidden="true"></span><span class="md">Noticias</span></a></li>
                             <li><a href="projetos.html"><span class="glyphicon glyphicon-check sd" aria-hidden="true"></span><span class="md">Votar Projetos</span></a></li>
-                            <li><a href="#"><span class="glyphicon glyphicon-send sd" aria-hidden="true"></span><span class="md">Propor Projeto</span></a></li>
-                            <li><a href="#"><span class="glyphicon glyphicon-user sd" aria-hidden="true"></span><span class="md">Login/Cadastro</span></a></li>
+                            <li><a href="postar.html"><span class="glyphicon glyphicon-send sd" aria-hidden="true"></span><span class="md">Propor Projeto</span></a></li>
+                            <li><a href="cadastro.html"><span class="glyphicon glyphicon-user sd" aria-hidden="true"></span><span class="md">Login/Cadastro</span></a></li>
                       </ul>
                     </div>
                     <div class="col-sm-9 col-md-10 col-md-offset-2 main" >
