--- a/web/projetos.html
+++ b/web/projetos.html
@@ -48,7 +48,7 @@
                             <li ><a href="index.html"><span class="glyphicon glyphicon-list-alt sd" aria-hidden="true"></span><span class="md">Noticias</span></a></li>
                             <li class="active"><a href="projetos.html"><span class="glyphicon glyphicon-check sd" aria-hidden="true"></span><span class="md">Votar Projetos</span></a></li>
                             <li><a href="postar.html"><span class="glyphicon glyphicon-send sd" aria-hidden="true"></span><span class="md">Propor Projeto</span></a></li>
-                            <li><a href="#"><span class="glyphicon glyphicon-tasks sd" aria-hidden="true"></span><span class="md">Misc</span></a></li>
+                            <li ><a href="cadastro.html"><span class="glyphicon glyphicon-user sd" aria-hidden="true"></span><span class="md">Login/Cadastro</span></a></li>
                       </ul>
                     </div>
                     <div class="col-sm-9 col-md-10 col-md-offset-2 main" >
@@ -59,13 +59,15 @@
                                     <div class="descricao">{{projeto.description}}</div>
                                     <div class="vejaMais">
                                         <span class="label label-danger">
-                                            Não
+                                            Não {{projeto.contra}}
                                             <span class="glyphicon glyphicon-remove"></span>
                                         </span> 
-                                        <span class="label label-success">
-                                            Sim
-                                            <span class="glyphicon glyphicon-ok"></span>
-                                        </span>
+                                        <a href="#" ng-click="projeto.favor +1">
+                                            <span class="label label-success">
+                                                Sim {{projeto.favor}}
+                                                <span class="glyphicon glyphicon-ok"></span>
+                                            </span>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
